crates/edgezero-macros/tests/ui/secret_with_serde_container_rename_all.stderr
error: `#[derive(AppConfig)]` rejects `#[serde(rename_all = ...)]` on structs with `#[secret]` fields or `#[app_config(nested)]` children: secret_fields() uses Rust field names verbatim, so a container rename would silently desync `config validate` from runtime deserialisation
 --> tests/ui/secret_with_serde_container_rename_all.rs:8:1
  |
8 | #[serde(rename_all = "kebab-case")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
